# CorridorKey-Runtime

./: .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  DESIGN.md  README.md  WORKFLOW.md
.agents/: agentic-state.json
.githooks/: pre-push
cmake/: CorridorKeyAdobeSdk.cmake  (+1 more)
src/: CMakeLists.txt
src/app/: CMakeLists.txt  hardware_profile.hpp  host_plugin_runtime_client.cpp  host_plugin_runtime_client.hpp  host_plugin_runtime_family.hpp  host_plugin_runtime_protocol.cpp  host_plugin_runtime_protocol.hpp  host_plugin_runtime_server_main.cpp  host_plugin_runtime_service.cpp  host_plugin_runtime_service.hpp  host_plugin_session_broker.cpp  host_plugin_session_broker.hpp  host_plugin_session_policy.hpp  job_orchestrator.cpp  model_compiler.cpp  ofx_runtime_protocol.cpp  ofx_runtime_protocol.hpp  ofx_session_broker.cpp  runtime_contracts.cpp  runtime_contracts.hpp  runtime_contracts_probes.cpp  runtime_diagnostics.cpp  version_check.cpp
src/cli/: main.cpp
src/common/: host_plugin_runtime_defaults.hpp  local_ipc.cpp  local_ipc.hpp  runtime_paths.hpp  shared_memory_transport.cpp  shared_memory_transport.hpp
src/core/: CMakeLists.txt  device_detection.cpp  engine.cpp  gpu_prep.cpp  gpu_prep.hpp  gpu_resize.cpp  gpu_resize.hpp  inference_output_validation.hpp  inference_session.cpp  inference_session.hpp  mlx_session.cpp  model_input_normalization.hpp  npp_stream_context.hpp  ort_process_context.cpp  ort_process_context.hpp  postprocess_policy.hpp  torch_trt_loader.cpp  torch_trt_loader.hpp  torch_trt_session.cpp  torch_trt_session.hpp  windows_rtx_probe.cpp
src/gui/: package.json  pnpm-lock.yaml
src/gui/scripts/: audit-design-contracts.mjs  smoke-job-lifecycle.mjs  smoke-real-runtime.mjs  smoke-runtime-readiness.mjs
src/gui/src/: App.tsx  index.css
src/gui/src-tauri/: Cargo.toml  tauri.conf.json
src/gui/src-tauri/src/: lib.rs
src/gui/src/components/layout/: sidebar.tsx  topbar.tsx
src/gui/src/components/workflow/: ComparisonSurface.tsx  JobStatusPanel.tsx  OutputRecipePanel.tsx  PreviewSurface.tsx  ProcessFlow.tsx  QualityControlsPanel.tsx  WorkbenchViewer.tsx  WorkflowInputsPanel.tsx  WorkflowPanelPrimitives.tsx  WorkflowRunPanel.tsx  WorkflowSetupRail.tsx
src/gui/src/lib/: advancedSettings.test.ts  advancedSettings.ts  catalog.test.ts  catalog.ts  diagnosticLog.test.ts  diagnosticLog.ts  engine.ts  job.test.ts  job.ts  jobRecipe.test.ts  jobRecipe.ts  jobStatus.test.ts  jobStatus.ts  jobTelemetry.test.ts  jobTelemetry.ts  media.test.ts  media.ts  outputRecipe.test.ts  outputRecipe.ts  preview.test.ts  preview.ts  runtimeCommands.test.ts  runtimeCommands.ts  store.test.ts  store.ts  viewerCompare.test.ts  viewerCompare.ts  viewerSync.test.ts  viewerSync.ts  workflowLabels.test.ts  workflowLabels.ts
src/plugins/adobe/: CMakeLists.txt  adobe_bridge.cpp  adobe_bridge.hpp  adobe_effect.cpp  adobe_effect_metadata.hpp.in  adobe_effect_parameters.cpp  adobe_effect_parameters.hpp  adobe_effect_render.cpp  adobe_effect_render.hpp  adobe_effect_runtime_request.cpp  adobe_frame_output.cpp  adobe_matte_params.hpp  adobe_runtime_bridge.cpp  adobe_runtime_client_cache.cpp  adobe_runtime_client_cache.hpp  adobe_sequence_state.hpp  corridorkey_adobe.r.in
src/plugins/ofx/: CMakeLists.txt  ofx_actions.cpp  ofx_constants.hpp  ofx_frame_cache.cpp  ofx_image_utils.cpp  ofx_instance.cpp  ofx_model_selection.hpp  ofx_plugin.cpp  ofx_plugin_descriptors.cpp  ofx_plugin_descriptors.hpp  ofx_render.cpp  ofx_screen_color.hpp  ofx_shared.hpp
src/post_process/: despeckle.cpp  screen_color.hpp  source_passthrough.cpp
tests/: CMakeLists.txt  visual_quality_synthetic.hpp
tests/e2e/: test_cli_flags.cpp
tests/integration/: CMakeLists.txt  host_plugin_runtime_test_quick_exit.cpp  ofx_benchmark_harness.cpp  ofx_rpc_benchmark_harness.cpp  test_adobe_runtime_bridge.cpp  test_cache_fallback.cpp  test_doctor_report.cpp  test_engine_fallback_policy.cpp  test_engine_torch_trt.cpp  test_engine_warmup.cpp  test_host_plugin_runtime_client.cpp  test_host_plugin_runtime_service.cpp  test_host_plugin_session_broker.cpp  test_job_orchestrator.cpp  test_macos_runtime_qos_regression.py  test_ofx_plugin_exceptions.cpp  test_ofx_runtime_client.cpp  test_ofx_session_broker.cpp
tests/regression/: CMakeLists.txt  test_adobe_cmake_scaffold.ps1  test_adobe_host_smoke_scaffold.ps1  test_adobe_install_smoke.ps1  test_adobe_jordan_fixture_scaffold.ps1  test_adobe_package_scaffold.ps1  test_adobe_pipl_metadata.cmake  test_adobe_sdk_resolution.cmake  test_adobe_windows_wrapper_args.ps1  test_inno_app_constant_initialization.ps1  test_regression_0056_bundle_vcruntime.cpp  test_tauri_runtime_staging_ffmpeg_source.ps1  test_windows_blue_runtime_dependency_validation.ps1  test_windows_build_label_reference.ps1  test_windows_doctor_missing_model_tolerance.ps1  test_windows_documentation_contracts.ps1  test_windows_runtime_package_label_guard.ps1  test_windows_runtime_package_wrapper.ps1  test_windows_runtime_product_contract.ps1  test_windows_suite_compile_scaffold.ps1  test_windows_suite_install_readiness.ps1  test_windows_suite_installer_scaffold.ps1  test_windows_suite_iss_render.ps1  test_windows_suite_online_optional_payloads.ps1  test_windows_suite_payload_staging.ps1  test_windows_suite_readiness_wrapper.ps1  test_windows_test_runtime_staging_scaffold.ps1
tests/unit/: CMakeLists.txt  test_adobe_bridge.cpp  test_adobe_effect.cpp  test_despill.cpp  test_gpu_resize.cpp  test_host_plugin_runtime_client.cpp  test_host_plugin_runtime_protocol.cpp  test_host_plugin_session_policy.cpp  test_inference_postprocess_policy.cpp  test_job_orchestrator.cpp  test_model_input_normalization.cpp  test_ofx_color_management.cpp  test_ofx_descriptor_split.cpp  test_ofx_frame_cache.cpp  test_ofx_lifecycle.cpp  test_ofx_model_selection.cpp  test_ofx_runtime_panel.cpp  test_ofx_runtime_protocol.cpp  test_ofx_stubs.cpp  test_runtime_contracts.cpp  test_runtime_diagnostics.cpp  test_synthetic_chroma_quality.cpp  test_version_check.cpp  test_windows_rtx_probe.cpp
(+143 files in other folders)
